# rag_lite

./: .env.example  .gitignore  CLAUDE.md  constitution.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/smart-commit/: SKILL.md
app/: __init__.py  config.py
app/models/: __init__.py  base.py  document.py  knowledgebase.py  settings.py  user.py
app/routes/: __init__.py  api.py  auth.py  document.py  knowledgebase.py  main.py  settings.py  upload.py
app/services/: __init__.py  document_processor.py  document_service.py  knowledgebase_service.py  settings_service.py  user_service.py
app/services/embedding/: __init__.py  base.py  factory.py
app/services/parser/: __init__.py  base.py  docx_parser.py  factory.py  md_parser.py  pdf_parser.py  txt_parser.py
app/services/storage/: __init__.py  base.py  factory.py  local_storage.py  minio_storage.py
app/services/vector_store/: __init__.py  base.py  chroma_store.py  factory.py  milvus_store.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: about.html  base.html  chat.html  documents.html  index.html
app/templates/errors/: 404.html  500.html
app/util/: auth.py  db.py  file_validator.py  jwt_utils.py  logger.py  models_config.py  response.py
data/chroma/5fb3c12a-4a97-444a-9560-16ca95016063/: index_metadata.pickle
spec/: kb_doc_technical_doc.md
spec/document_process_0301/: spec.md
spec/view_chunks_0301/: plan.md  spec.md
specs/knowledge-chat-0302/: spec.md
tests/routes/: __init__.py  test_document_chunks.py
tests/services/: test_document_processor.py
tests/services/embedding/: __init__.py  test_embedding.py
tests/services/parser/: __init__.py  test_parser.py
tests/services/vector_store/: __init__.py  test_chunks.py  test_vector_store.py
